@startuml

title __CONTROLLER's Class Diagram__\n

  namespace com.skhatoll.backend {
    namespace controller {
      class com.skhatoll.backend.controller.ActualizarRolRequest {
          - nombreRol : String
          + nombreRol()
          ~ ActualizarRolRequest()
      }
    }
  }
  

  namespace com.skhatoll.backend {
    namespace controller {
      class com.skhatoll.backend.controller.AuthController {
          + AuthController()
          + health()
          + login()
          + loginGet()
          + registro()
      }
    }
  }
  

  namespace com.skhatoll.backend {
    namespace controller {
      class com.skhatoll.backend.controller.PartidaController {
          + PartidaController()
          + abrirVotacion()
          + actualizarRol()
          + cambiarFase()
          + cancelarPartida()
          + cerrarPartida()
          + cerrarVotacion()
          + getEstadoPartida()
          + getNombresLobos()
          + getSesionActiva()
          + rendirse()
          + usarHabilidad()
          + votar()
      }
    }
  }
  

  namespace com.skhatoll.backend {
    namespace controller {
      class com.skhatoll.backend.controller.SalaController {
          + SalaController()
          + asignarNarrador()
          + crearSala()
          + getJugadores()
          + getJugadoresConRol()
          + getMiRol()
          + iniciarPartida()
          + salirDeSala()
          + unirse()
      }
    }
  }
  

  com.skhatoll.backend.controller.AuthController o-- com.skhatoll.backend.service.interfaces.auth.IAuthService : authService
  com.skhatoll.backend.controller.PartidaController o-- com.skhatoll.backend.service.interfaces.partida.IHabilidadService : habilidadService
  com.skhatoll.backend.controller.PartidaController o-- com.skhatoll.backend.service.interfaces.partida.IPartidaService : partidaService
  com.skhatoll.backend.controller.SalaController o-- com.skhatoll.backend.service.interfaces.jugador.IJugadorService : jugadorService
  com.skhatoll.backend.controller.SalaController o-- com.skhatoll.backend.service.interfaces.sala.ISalaService : salaService


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
